--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="singlePageApp">
   <head>
-    <title>Chat Example</title>
+    <title>Angular Js Routing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/angular.min.js"></script>
     
